consulta externa adicionada
